Fix self-alignment for Toggle component

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
 	display: flex;
 	min-height: 100vh;
 	line-height: 1.1;
-	text-align: center;
 	flex-direction: column;
 	justify-content: center;
 }
