--- a/src/components/form/Toggle/Toggle.module.css
+++ b/src/components/form/Toggle/Toggle.module.css
@@ -3,14 +3,15 @@
 }
 
 .toggleLabel {
-	cursor: pointer;
-	display: inline-block;
-	position: relative;
-	width: 5.6rem;
-	height: 3.1rem;
 	background-color: var(--toggle-off-color);
 	border-radius: 5rem;
+	cursor: pointer;
+	display: inline-block;
+	height: 3.1rem;
+	position: relative;
+	text-align: center;
 	transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+	width: 5.6rem;
 }
 
 .toggleHandler {
